# chalkbyte

./: .env.example  .env.test  .gitignore  AGENTS.md  AUTHENTICATION.md  CHANGELOG_PASSWORD_RESET.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  LEVELS_API.md  QUICKSTART.md  README.md  README_PASSWORD_RESET.md  ROLES_PERMISSIONS.md  ROLE_MIDDLEWARE_SUMMARY.md  SUMMARY.md  SWAGGER.md  SWAGGER_IMPLEMENTATION.md  TEST_SUMMARY.md  USER_ROLES.md  docker-compose.yml  justfile  requests.http  run_tests.sh  slumber.yml  test_profile_endpoints.sh  test_refresh_token.sh  test_role_middleware.sh  test_system_admin.sh
.cargo/: config.toml
.github/: copilot-instructions.md
.sqlx/: query-03b9e24e6244b637ad851ceccee6332346310fbe2972836f314e59f0e202bc51.json  query-04f7ddf4e9ba99f526dd66133744f56e7f08116cd34b97de0c1b77449e45b1e6.json  query-05755ff8b74059273802f4586f7f8b640c6340e55407e4a15cce8d744557e7ad.json  query-0f98e2528cfc6ceb7a558ed93ab5e63be19cb891a1b402de7e077fa6009bd2e3.json  query-10ce8a6fbb947ee24bcdef834fb9f02a635a8a406388ce90faf5cea43a5f457b.json  query-10d4f59dad0c266bf0b941efbc5eb7e17cd5fde783dd45d2e0e43f3f6dfba761.json  query-117c4527d6ad099a4a31eb2c29b84486d3bbcf1db7476cbf230ccc5eb1b40236.json  query-11ec56c1c52ef7a609eeaf22c39a5cfcf78256074b9577f78ee6358580e1ba85.json  query-120b12ec09280c1771a234673ea39ac1c9b3d11b2b2b930a81edda3cc1b70467.json  query-123df448daeef773ba12422a01a49f9ad039f1a3d488cbc3ba5591c6d2a085cd.json  query-180e9a1acbb36fa3504d7d1f9d3c6147750f312b15e509f3032faebb213c42d1.json  query-1d3cabf9932c3f05583cd8b2eda28195bcb7a8c5a466757521db292019d8b5e9.json  query-1da527d206b7bde4dfd1ab5fa8cebc9e935fec05bb1b25e6f0b06127e3fcc616.json  query-1dbb904ef86d5fbda59343d452390627db410ca3036e272b121631024c3b8217.json  query-1f568a4d190aa0997d9fa938d7a80e535294ca0a3330fb5785ad462de4618d8c.json  query-1fb3811ab2bb09ea30d005f36fed3b10b1c52621ea060a3779346edfab56b2f4.json  query-21cca6a27230db1b9a9da27b2125d75681aa3439f7ea6e055e4dfd8bf7ba9be8.json  query-23d00d53e37b68755d7463c7b3cc62d3f18985867f4b4af63d57594d5db10c19.json  query-2605bfe04f5a76d2247e6d08267bfb57e6a51acac0767791f8ac106b066ae31c.json  query-2a54f1ed3819472c68b24cd49d3e883b3dc6d4040ebdb6ede8e732a40933838e.json  query-2af4555975bb041522fefe9eb3e9509d15ce76f194c79a1782814af1029288ee.json  query-2d718df0c14587afebb4d7dbaf9962aeb258ebe6aca042e64286c307bc854755.json  query-2e8da53ac8afad4542f3d088d97682f4a872ca94d3a57c80ad629c3bac4bac14.json  query-32393a575116696466c16cb47d791bf4c21f0c0178280fd538b4f8c4c63ad120.json  query-37550a7cebeafb7af57a586377851373334637f06b992ce824c697e9ed382904.json  query-38776e3f0d799a8a80267b78374deecd509a6e4d5c7889d9b20dfd6615294e5a.json  query-39baacdbae1fb8e337684a9c6a1a5a5885bb664f6b31d2267111b690b14b27e9.json  query-39e5f354f25b9fb2eb432d6eb32200ca8f8d0fd2bd3d425294ef025f5c0e6fb5.json  query-3b40c6613ff813b7e6d6b7722cc20bd1ea177689e8548d3fdc0105e7f0b85006.json  query-4631cc4d050d6d90b66e1f8d9fdb047ccf6641727eb8f93129e463fe0c3cc379.json  query-489b6c9769dfd7b57ddb7fd30068f655bb8a5c59f5795cb1ef655151c00eb26b.json  query-4b1b370b7824f8c786b46866a343d448b9789ae20025c71369d228a67890fc90.json  query-4f8ccdb262e78b553fc9974e621b3847b7aaf2dfb78157c66c6b19274134f1fa.json  query-5b93086e2c270db235864957129ea7f7f412f489f58f620cafafc9ecb6d4a175.json  query-5d34c3dbf6f96fa5f105e3ef2c90d61da646e2f18e317ece803a23fb8c1ff10e.json  query-679f74a1ef86833ca62b1b14b4e947bd8f9e4543a3b3a5b32deab00dcdb182f4.json  query-7036a9d970c8be05be66bda71017ce0d875d4b25b3dbc5d24282d320ae3593e4.json  query-713b1b65e876be733c443a9c04ace31d48b9cd341a02a1fa2e4fca76b235989b.json  query-7438406d529203ae5279bbd91c58da4342b5ac184c453c596bba6408254b984a.json  query-770ed9060a7e3386b0127cf86d4c4211bc4faf069e4aed115a25c04ea0e6c6ed.json  (+44 more)
.zed/: tasks.json
crates/chalkbyte-auth/: Cargo.toml
crates/chalkbyte-auth/src/: claims.rs  jwt.rs  lib.rs
crates/chalkbyte-cache/: Cargo.toml
crates/chalkbyte-cache/src/: config.rs  keys.rs  lib.rs  middleware.rs  redis.rs
crates/chalkbyte-cli/: Cargo.toml
crates/chalkbyte-cli/src/: lib.rs  main.rs
crates/chalkbyte-cli/src/seeder/: branches.rs  levels.rs  mod.rs  models.rs  schools.rs  users.rs
crates/chalkbyte-core/: Cargo.toml
crates/chalkbyte-core/src/: file_storage.rs  lib.rs  pagination.rs  password.rs  permissions.rs
crates/chalkbyte-models/: Cargo.toml
crates/chalkbyte-models/src/: academic_sessions.rs  auth.rs  branches.rs  ids.rs  levels.rs  lib.rs  mfa.rs  roles.rs  students.rs  terms.rs  users.rs  value_types.rs
crates/chalkbyte-observability/: Cargo.toml
crates/chalkbyte-observability/src/: basic_logging.rs  lib.rs
docs/: AUTHENTICATION.md  CACHING.md  CLI_GUIDE.md  EMAIL_CONFIGURATION.md  LEVELS_API.md  LEVELS_TESTS.md  LOGGING.md  LOGGING_QUICK_REFERENCE.md  MFA_GUIDE.md  MFA_QUICK_START.md  OBSERVABILITY.md  PERMISSION_BASED_ACCESS.md  QUICKSTART_SYSTEM_ADMIN.md  QUICK_REFERENCE.md  QUICK_START_PASSWORD_RESET.md  README.md  README_ROLE_MIDDLEWARE.md  ROLES_PERMISSIONS_API.md  ROLE_MIDDLEWARE.md  ROLE_MIDDLEWARE_EXAMPLES.md  ROLE_MIDDLEWARE_QUICKSTART.md  ROLE_MIDDLEWARE_QUICK_REFERENCE.md  SEEDERS.md  SEEDER_PERFORMANCE.md  SETUP_GUIDE.md  STUDENTS_MANAGEMENT.md  SYSTEM_ADMIN_IMPLEMENTATION.md  USER_ROLES.md  mfa_frontend_example.html
migrations/: 20250702144625_initial_setup.sql  20250720140219_add_password_to_users_table.sql  20251111195802_add_user_roles.sql  20251112081331_add_system_admin_and_schools.sql  20251112083030_add_unique_school_name.sql  20251116142011_add_password_reset_tokens.sql  20251116144210_add_mfa_support.sql  20251118200126_add_refresh_tokens.sql  20251125183216_add_student_fields.sql  20251130142831_create_levels.sql  20251130163445_create_branches.sql  20251227112343_create_roles_permissions.sql  20251227183500_initial_setup.sql  20260105085100_add_role_slug.sql  20260115120000_add_academic_sessions.sql  20260125150000_add_school_logo_path.sql
observability/: README.md  grafana-entrypoint.sh  loki.yaml  otel-collector-config.yaml  prometheus-entrypoint.sh  prometheus.yml  prometheus.yml.template  promtail.yaml  (+1 more)
(+105 files in other folders)
