[package]
name = "chalkbyte"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chalkbyte"
path = "src/main.rs"

[[bin]]
name = "chalkbyte-cli"
path = "src/bin/cli.rs"

[dependencies]
validator = { version = "0.20.0", features = ["derive"] }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tokio = { version = "1.48", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dotenvy = "0.15"
bcrypt = "0.17"
jsonwebtoken = "9.3"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"
utoipa = { version = "5.4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }


[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
