[workspace]
resolver = "2"
members = [
    "crates/chalkbyte-core",
    "crates/chalkbyte-config",
    "crates/chalkbyte-db",
    "crates/chalkbyte-auth",
    "crates/chalkbyte-models",
    "crates/chalkbyte-cli",
    "crates/chalkbyte-cache",
    "crates/chalkbyte-observability",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/chalkbyte/chalkbyte-api"

[workspace.dependencies]
# Internal crates
chalkbyte-core = { path = "crates/chalkbyte-core" }
chalkbyte-config = { path = "crates/chalkbyte-config" }
chalkbyte-db = { path = "crates/chalkbyte-db" }
chalkbyte-auth = { path = "crates/chalkbyte-auth" }
chalkbyte-models = { path = "crates/chalkbyte-models" }
chalkbyte-cli = { path = "crates/chalkbyte-cli" }
chalkbyte-cache = { path = "crates/chalkbyte-cache" }
chalkbyte-observability = { path = "crates/chalkbyte-observability" }

# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "macros",
] }

# Types
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Environment
dotenvy = "0.15"

# Auth
bcrypt = "0.17"
jsonwebtoken = "9.3"

# CLI
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"

# API Documentation
utoipa = { version = "5.4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }

# MFA
totp-rs = { version = "5.6", features = ["qr", "otpauth"] }
data-encoding = "2.6"
rand = "0.8"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.23"
opentelemetry = { version = "0.22", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.15", features = ["trace", "metrics", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.14"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Rate limiting
tower_governor = "0.8.0"
governor = "0.10.4"

# Caching
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
sha2 = "0.10"
hex = "0.4"
http-body-util = "0.1"

# Testing / Utilities
rayon = "1.11.0"
fake = { version = "4", features = ["derive", "chrono", "uuid"] }

[package]
name = "chalkbyte"
version.workspace = true
edition.workspace = true

[features]
default = []
observability = ["chalkbyte-observability/observability"]
no-observability = []
test-utils = []

[[bin]]
name = "chalkbyte"
path = "src/main.rs"

[[bin]]
name = "chalkbyte-cli"
path = "src/bin/cli.rs"

[dependencies]
# Internal crates
chalkbyte-core.workspace = true
chalkbyte-config.workspace = true
chalkbyte-db.workspace = true
chalkbyte-auth.workspace = true
chalkbyte-models.workspace = true
chalkbyte-cli.workspace = true
chalkbyte-cache.workspace = true
chalkbyte-observability = { workspace = true, features = ["observability"] }

# Web framework
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true

# Validation
validator.workspace = true

# Error handling
anyhow.workspace = true

# Environment
dotenvy.workspace = true

# Auth (needed for seeder)
bcrypt.workspace = true

# CLI
clap.workspace = true
dialoguer.workspace = true

# API Documentation
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-scalar.workspace = true

# Email
lettre.workspace = true

# MFA
totp-rs.workspace = true
data-encoding.workspace = true
rand.workspace = true

# Tracing (base crate, used by tower-http and modules)
tracing.workspace = true

# Rate limiting
tower_governor.workspace = true
governor.workspace = true

# Utilities
rayon.workspace = true
fake.workspace = true

[dev-dependencies]
chalkbyte = { path = ".", features = ["test-utils"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.6", features = ["full"] }
http-body-util = "0.1"
