[package]
name = "chalkbyte-cache"
version.workspace = true
edition.workspace = true

[dependencies]
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0"
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
http-body-util = "0.1"
sha2 = "0.10"
hex = "0.4"
tower = { workspace = true }
tower-http = { workspace = true }
