[package]
name = "chalkbyte-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["observability"]
observability = [
    "tracing",
    "tracing-subscriber",
    "tracing-appender",
    "tracing-opentelemetry",
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "opentelemetry-semantic-conventions",
    "metrics",
    "metrics-exporter-prometheus",
]

[dependencies]
# Core dependencies (always included)
axum.workspace = true
tokio.workspace = true
serde.workspace = true
tower.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
uuid.workspace = true

# Observability dependencies (optional, enabled by "observability" feature)
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }
